add add-opens to pom.xml to allow tests to run as tests are package private