@@ -47,6 +47,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        ${maven-surefire-plugin.argLine}
+                        --add-opens org.sn.myutils.core/org.sn.myutils.util=ALL-UNNAMED
+                        --add-opens org.sn.myutils.core/org.sn.myutils.util.concurrent=ALL-UNNAMED
+                    </argLine>
+                </configuration> 
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
